[project]
name = "usedcars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.4",
    "ipython>=9.2.0",
    "lxml>=5.4.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "playwright>=1.52.0",
    "playwright-stealth>=1.0.6",
    "plotly>=6.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "setuptools>=80.4.0",
]
